Removing JWT token validator and Swagger OAuth setup from basket-api
