# src/backend/services/basket.api/internal/docs/swagger.json
@@ -18,11 +18,6 @@
     "paths": {
         "/checkout": {
             "post": {
-                "security": [
-                    {
-                        "OAuth": []
-                    }
-                ],
                 "description": "Start checkout",
                 "consumes": [
                     "application/json"
@@ -60,11 +55,6 @@
         },
         "/items": {
             "post": {
-                "security": [
-                    {
-                        "OAuth": []
-                    }
-                ],
                 "description": "add by json new CustomerBasket",
                 "consumes": [
                     "application/json"
@@ -105,11 +95,6 @@
         },
         "/items/{id}": {
             "get": {
-                "security": [
-                    {
-                        "OAuth": []
-                    }
-                ],
                 "description": "Get CustomerBasket by ID",
                 "consumes": [
                     "application/json"
@@ -146,11 +131,6 @@
                 }
             },
             "delete": {
-                "security": [
-                    {
-                        "OAuth": []
-                    }
-                ],
                 "description": "Deletes CustomerBasket by ID",
                 "consumes": [
                     "application/json"
@@ -294,16 +274,6 @@
                     "type": "string",
                     "example": "status bad request"
                 }
-            }
-        }
-    },
-    "securityDefinitions": {
-        "OAuth": {
-            "type": "oauth2",
-            "flow": "implicit",
-            "authorizationUrl": "{{.AuthUrl}}",
-            "scopes": {
-                "basket-api": "\t\t\t\t\t\tAccess to basket-api"
             }
         }
     }
